--- a/src/main/resources/theme/vault/replay/online_replays.fxml
+++ b/src/main/resources/theme/vault/replay/online_replays.fxml
@@ -2,14 +2,13 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -18,88 +17,42 @@
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:id="replayVaultRoot" xmlns="http://javafx.com/javafx/8.0.60"
            fx:controller="com.faforever.client.replay.OnlineReplayVaultController">
     <children>
-        <VBox fx:id="loadingPane" alignment="CENTER" spacing="10.0">
-            <children>
-                <Label contentDisplay="TOP" text="%vault.replays.loading">
-                    <graphic>
-                        <ProgressIndicator/>
-                    </graphic>
-                </Label>
-            </children>
-        </VBox>
         <ScrollPane fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <content>
-                <VBox fx:id="contentPane" alignment="TOP_CENTER" spacing="10.0">
+                <VBox fx:id="contentPane" spacing="10.0">
                     <children>
-                        <Label styleClass="hint" text="%vault.replays.excuse" wrapText="true">
-                            <graphic>
-                                <Label styleClass="icon" text=""/>
-                            </graphic>
-                        </Label>
-                        <HBox maxWidth="1.7976931348623157E308" spacing="10.0">
+                        <VBox fx:id="criteriaPane">
                             <children>
-                                <GridPane hgap="10.0" vgap="10.0" HBox.hgrow="ALWAYS">
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
-                                        <ColumnConstraints hgrow="NEVER" minWidth="1.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                        <ColumnConstraints hgrow="NEVER" minWidth="1.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                    </rowConstraints>
+                                <HBox alignment="CENTER_LEFT" spacing="10.0">
                                     <children>
-                                        <TextField fx:id="mapTextField" promptText="%vault.replays.searchMapPrompt"
-                                                   GridPane.rowIndex="1"/>
-                                        <Label styleClass="h1" text="%vault.replays.searchMapTitle"/>
-                                        <Label styleClass="h1" text="%vault.replays.searchPlayerTitle"
-                                               GridPane.columnIndex="2"/>
-                                        <Label styleClass="h1" text="%vault.replays.searchFeaturedModTitle"
-                                               GridPane.columnIndex="4"/>
-                                        <TextField fx:id="playerTextField" layoutX="10.0" layoutY="50.0"
-                                                   promptText="%vault.replays.searchPlayerPrompt"
-                                                   GridPane.columnIndex="2" GridPane.rowIndex="1"/>
-                                        <ComboBox fx:id="featuredModListView" maxWidth="1.7976931348623157E308"
-                                                  GridPane.columnIndex="4" GridPane.rowIndex="1"/>
-                                        <Button mnemonicParsing="false" onAction="#onSearchByMap"
-                                                styleClass="button-raised" text="%vault.replays.mapSearchButton"
-                                                GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                                        <fx:include fx:id="initialLogicalNode" source="../../query/logical_node.fxml"/>
+                                        <Button fx:id="searchButton" defaultButton="true" mnemonicParsing="false"
+                                                onAction="#onSearchButtonClicked" styleClass="button-raised"
+                                                text="%search">
                                             <graphic>
                                                 <Label styleClass="icon" text=""/>
                                             </graphic>
                                         </Button>
-                                        <Button mnemonicParsing="false" onAction="#onSearchByPlayer"
-                                                styleClass="button-raised" text="%vault.replays.playerSearchButton"
-                                                GridPane.columnIndex="2" GridPane.halignment="RIGHT"
-                                                GridPane.rowIndex="2">
-                                            <graphic>
-                                                <Label styleClass="icon" text=""/>
-                                            </graphic>
-                                        </Button>
-                                        <Button defaultButton="true" mnemonicParsing="false" onAction="#onSearchByMod"
-                                                styleClass="button-raised" text="%vault.replays.modSearchButton"
-                                                GridPane.columnIndex="4" GridPane.halignment="RIGHT"
-                                                GridPane.rowIndex="2">
-                                            <graphic>
-                                                <Label styleClass="icon" text=""/>
-                                            </graphic>
-                                        </Button>
-                                        <Separator maxHeight="1.7976931348623157E308" orientation="VERTICAL"
-                                                   GridPane.columnIndex="1" GridPane.halignment="CENTER"
-                                                   GridPane.rowSpan="2147483647"/>
-                                        <Separator maxHeight="1.7976931348623157E308" orientation="VERTICAL"
-                                                   GridPane.columnIndex="3" GridPane.halignment="CENTER"
-                                                   GridPane.rowSpan="2147483647"/>
                                     </children>
-                                </GridPane>
-                            </children>
-                            <padding>
-                                <Insets bottom="10.0" top="10.0"/>
-                            </padding>
                         </HBox>
+                            </children>
+                        </VBox>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <Button mnemonicParsing="false" onAction="#onAddCriteriaButtonClicked"
+                                        text="%query.addCriteria"/>
+                                <CheckBox fx:id="displayQueryCheckBox" mnemonicParsing="false"
+                                          text="%vault.replays.displayQuery"/>
+                            </children>
+                        </HBox>
+                        <TextField fx:id="queryTextField" maxWidth="1.7976931348623157E308"
+                                   promptText="%vault.replays.queryPrompt"/>
+                        <Separator prefWidth="200.0"/>
+                        <Button fx:id="backButton" mnemonicParsing="false" onAction="#onBackButtonClicked" text="%back">
+                            <graphic>
+                                <Label styleClass="icon" text=""/>
+                            </graphic>
+                        </Button>
                         <GridPane fx:id="showroomGroup" vgap="10.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
@@ -117,32 +70,38 @@
                                 <Label styleClass="h2" text="%vault.replays.newest"/>
                                 <Button mnemonicParsing="false" styleClass="button-raised" text="%more"
                                         GridPane.columnIndex="1"/>
-                                <FlowPane fx:id="newestPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="1"/>
+                                <VBox fx:id="newestPane" spacing="10.0" GridPane.columnSpan="2147483647"
+                                      GridPane.rowIndex="1"/>
                                 <Label styleClass="h2" text="%vault.replays.highestRated" GridPane.rowIndex="2"/>
                                 <Button mnemonicParsing="false" styleClass="button-raised" text="%more"
                                         GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                                <FlowPane fx:id="highestRatedPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="3"/>
+                                <VBox fx:id="highestRatedPane" spacing="10.0" GridPane.columnSpan="2147483647"
+                                      GridPane.rowIndex="3"/>
                                 <Label styleClass="h2" text="%vault.replays.mostWatched" GridPane.rowIndex="4"/>
                                 <Button mnemonicParsing="false" styleClass="button-raised" text="%more"
                                         GridPane.columnIndex="1" GridPane.rowIndex="4"/>
-                                <FlowPane fx:id="mostWatchedPane" hgap="10.0" maxWidth="1.7976931348623157E308"
-                                          prefWrapLength="1500.0" vgap="10.0" GridPane.columnSpan="2147483647"
-                                          GridPane.rowIndex="5"/>
+                                <VBox fx:id="mostWatchedPane" spacing="10.0" GridPane.columnSpan="2147483647"
+                                      GridPane.rowIndex="5"/>
                             </children>
                         </GridPane>
                         <VBox fx:id="searchResultGroup" spacing="10.0">
                             <children>
                                 <Label styleClass="h2" text="%searchResult"/>
-                                <FlowPane fx:id="searchResultPane" hgap="10.0" vgap="10.0"/>
+                                <VBox fx:id="searchResultPane" spacing="10.0"/>
+                            </children>
+                        </VBox>
+                        <VBox fx:id="loadingPane" alignment="CENTER" spacing="10.0">
+                            <children>
+                                <Label contentDisplay="TOP" text="%vault.replays.loading">
+                                    <graphic>
+                                        <ProgressIndicator/>
+                                    </graphic>
+                                </Label>
                             </children>
                         </VBox>
                     </children>
                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="30.0"/>
                     </padding>
                 </VBox>
             </content>
