--- a/src/main/resources/theme/vault/replay/replay_card.fxml
+++ b/src/main/resources/theme/vault/replay/replay_card.fxml
@@ -4,30 +4,118 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="replayTileRoot" hgap="10.0" onMouseClicked="#onShowReplayDetail"
-          prefWidth="200.0" styleClass="card,pointable" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.60"
-          fx:controller="com.faforever.client.replay.ReplayCardController">
+<?import java.lang.String?>
+<GridPane xmlns:fx="http://javafx.com/fxml/1" fx:id="replayTileRoot" hgap="20.0" maxWidth="1.7976931348623157E308"
+          onMouseClicked="#onShowReplayDetail" styleClass="card,pointable" vgap="5.0"
+          xmlns="http://javafx.com/javafx/8.0.60" fx:controller="com.faforever.client.replay.ReplayCardController">
     <columnConstraints>
-        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
         <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+        <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
-        <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="1.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="1.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="1.0" vgrow="SOMETIMES"/>
     </rowConstraints>
     <children>
-        <ImageView fx:id="thumbnailImageView" fitHeight="128.0" fitWidth="128.0" pickOnBounds="true"
-                   preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER"/>
-        <Label fx:id="gameTitleLabel" text="&lt;Title&gt;" GridPane.columnSpan="2147483647" GridPane.rowIndex="1"/>
-        <Label fx:id="playsLabel" text="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+        <ImageView fx:id="thumbnailImageView" fitHeight="64.0" fitWidth="64.0" pickOnBounds="true" preserveRatio="true"
+                   GridPane.halignment="CENTER" GridPane.rowSpan="2147483647"/>
+        <HBox GridPane.columnIndex="1" GridPane.columnSpan="2147483647">
+            <children>
+                <Label fx:id="gameTitleLabel" styleClass="h2" text="&lt;Title&gt;"/>
+            </children>
+        </HBox>
+        <Label fx:id="dateLabel" graphicTextGap="10.0" text="&lt;Date&gt;" GridPane.columnIndex="1"
+               GridPane.rowIndex="1">
             <graphic>
-                <Label styleClass="icon" text=""/>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
             </graphic>
         </Label>
-        <Label styleClass="icon" text="" GridPane.rowIndex="3"/>
-        <Label fx:id="dateLabel" text="&lt;Date&gt;" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+        <Label fx:id="timeLabel" graphicTextGap="10.0" text="&lt;time&gt;" GridPane.columnIndex="2"
+               GridPane.rowIndex="1">
+            <graphic>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
+            </graphic>
+        </Label>
+        <Label fx:id="modLabel" graphicTextGap="10.0" text="&lt;Mod&gt;" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <graphic>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
+            </graphic>
+        </Label>
+        <Label fx:id="durationLabel" graphicTextGap="10.0" text="&lt;Duration&gt;" GridPane.columnIndex="4"
+               GridPane.rowIndex="1">
+            <graphic>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
+            </graphic>
+        </Label>
+        <Label fx:id="playerCountLabel" graphicTextGap="10.0" text="&lt;PlayerCount&gt;" GridPane.columnIndex="5"
+               GridPane.rowIndex="1">
+            <graphic>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
+            </graphic>
+        </Label>
+        <Label fx:id="ratingLabel" graphicTextGap="10.0" layoutX="134.0" layoutY="68.0" text="&lt;AvgRating&gt;"
+               GridPane.columnIndex="6" GridPane.rowIndex="1">
+            <graphic>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
+            </graphic>
+        </Label>
+        <Label fx:id="qualityLabel" graphicTextGap="10.0" text="&lt;Quality&gt;" GridPane.columnIndex="7"
+               GridPane.rowIndex="1">
+            <graphic>
+                <Label text="">
+                    <styleClass>
+                        <String fx:value="icon"/>
+                        <String fx:value="small"/>
+                    </styleClass>
+                </Label>
+            </graphic>
+        </Label>
+        <Label fx:id="numberOfReviewsLabel" graphicTextGap="10.0" text="(33)" GridPane.columnIndex="7"
+               GridPane.halignment="RIGHT">
+            <graphic>
+                <Label styleClass="icon" text=""/>
+            </graphic>
+        </Label>
+        <Label fx:id="playerListLabel" text="&lt;PlayerList&gt;" GridPane.columnIndex="1"
+               GridPane.columnSpan="2147483647" GridPane.rowIndex="2"/>
     </children>
 </GridPane>
