--- a/src/main/resources/theme/vault/replay/replay_detail.fxml
+++ b/src/main/resources/theme/vault/replay/replay_detail.fxml
@@ -1,7 +1,186 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
-<?import javafx.scene.layout.Pane?>
-<Pane xmlns:fx="http://javafx.com/fxml/1" fx:id="replayDetailRoot" maxHeight="-Infinity" maxWidth="-Infinity"
-      minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-      xmlns="http://javafx.com/javafx/8.0.60"/>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import java.lang.String?>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="replayDetailRoot" onMouseClicked="#onDimmerClicked"
+            styleClass="dimmer" xmlns="http://javafx.com/javafx/8.0.60"
+            fx:controller="com.faforever.client.replay.ReplayDetailController">
+   <children>
+       <AnchorPane layoutX="100.0" layoutY="100.0" onMouseClicked="#onContentPaneClicked" styleClass="modal-popup"
+                   AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0"
+                   AnchorPane.topAnchor="100.0">
+         <children>
+             <ScrollPane fitToWidth="true" layoutX="21.0" layoutY="31.0" AnchorPane.bottomAnchor="10.0"
+                         AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="20.0">
+               <content>
+                   <VBox alignment="TOP_CENTER" spacing="20.0">
+                     <children>
+                        <GridPane hgap="20.0" vgap="5.0">
+                           <columnConstraints>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                               <ColumnConstraints hgrow="ALWAYS" minWidth="10.0"/>
+                           </columnConstraints>
+                           <rowConstraints>
+                               <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                               <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                               <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                               <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                           </rowConstraints>
+                           <children>
+                               <ImageView fitHeight="128.0" fitWidth="128.0" pickOnBounds="true" preserveRatio="true"
+                                          GridPane.rowSpan="2147483647" GridPane.valignment="TOP"/>
+                               <Label fx:id="titleLabel" styleClass="h1" text="&lt;Title&gt;" GridPane.columnIndex="1"
+                                      GridPane.columnSpan="2" GridPane.valignment="TOP"/>
+                               <Label fx:id="dateLabel" text="&lt;Date&gt;" GridPane.columnIndex="1"
+                                      GridPane.rowIndex="2">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="timeLabel" text="&lt;Time&gt;" GridPane.columnIndex="2"
+                                      GridPane.rowIndex="2">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="modLabel" text="&lt;Mods&gt;" GridPane.columnIndex="1"
+                                      GridPane.rowIndex="3">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="durationLabel" text="&lt;Duration&gt;" GridPane.columnIndex="3"
+                                      GridPane.rowIndex="2">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="playerCountLabel" text="&lt;PlayerCount&gt;" GridPane.columnIndex="2"
+                                      GridPane.rowIndex="3">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="ratingLabel" text="&lt;AvgRating&gt;" GridPane.columnIndex="3"
+                                      GridPane.rowIndex="3">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="qualityLabel" text="&lt;Quality&gt;" GridPane.columnIndex="4"
+                                      GridPane.rowIndex="2">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Button defaultButton="true" mnemonicParsing="false" text="%game.watch"
+                                       GridPane.columnIndex="4" GridPane.columnSpan="2" GridPane.halignment="RIGHT"
+                                       GridPane.rowIndex="4">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Button>
+                               <Label fx:id="numberOfReviewsLabel" text="(33)" GridPane.columnIndex="4"
+                                      GridPane.columnSpan="2" GridPane.halignment="RIGHT">
+                                 <graphic>
+                                     <Label styleClass="icon" text=""/>
+                                 </graphic>
+                              </Label>
+                               <Label fx:id="mapLabel" text="&lt;OnMap&gt;" GridPane.columnIndex="1"
+                                      GridPane.columnSpan="2147483647" GridPane.rowIndex="1" GridPane.valignment="TOP"/>
+                           </children>
+                           <VBox.margin>
+                               <Insets/>
+                           </VBox.margin>
+                        </GridPane>
+                         <Separator maxWidth="1.7976931348623157E308"/>
+                         <HBox fx:id="teamsContainer"/>
+                         <Separator layoutX="10.0" layoutY="251.0" maxWidth="1.7976931348623157E308"/>
+                         <HBox fx:id="ratingContainer"/>
+                         <Separator layoutX="10.0" layoutY="254.0" maxWidth="1.7976931348623157E308"/>
+                         <Button fx:id="downloadMoreInfoButton" mnemonicParsing="false"
+                                 onAction="#onDownloadMoreInfoClicked" text="%game.downloadMoreInfo"/>
+                         <VBox fx:id="moreInformationPane">
+                             <children>
+                                 <GridPane hgap="10.0" vgap="10.0">
+                                     <columnConstraints>
+                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0"/>
+                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                                     </columnConstraints>
+                                     <rowConstraints>
+                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                         <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+                                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                     </rowConstraints>
+                                     <children>
+                                         <TableView fx:id="optionsTable" maxWidth="1.7976931348623157E308"
+                                                    GridPane.rowIndex="1">
+                                             <columns>
+                                                 <TableColumn fx:id="optionKeyColumn" editable="false" prefWidth="75.0"
+                                                              sortable="false" text="%game.optionKey"/>
+                                                 <TableColumn fx:id="optionValueColumn" editable="false"
+                                                              prefWidth="75.0" sortable="false"
+                                                              text="%game.optionValue"/>
+                                             </columns>
+                                             <columnResizePolicy>
+                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                             </columnResizePolicy>
+                                         </TableView>
+                                         <TableView fx:id="chatTable" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                             <columns>
+                                                 <TableColumn fx:id="chatGameTimeColumn" editable="false"
+                                                              prefWidth="75.0" sortable="false"
+                                                              text="%game.chat.gameTime"/>
+                                                 <TableColumn fx:id="chatSenderColumn" editable="false" prefWidth="75.0"
+                                                              sortable="false" text="%game.chat.sender"/>
+                                                 <TableColumn fx:id="chatMessageColumn" prefWidth="75.0"
+                                                              text="%game.chat.message"/>
+                                             </columns>
+                                             <columnResizePolicy>
+                                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                                             </columnResizePolicy>
+                                         </TableView>
+                                         <Label styleClass="h2" text="%game.options"/>
+                                         <Label styleClass="h2" text="%game.chat" GridPane.columnIndex="1"/>
+                                     </children>
+                                 </GridPane>
+                                 <Separator prefWidth="200.0"/>
+                                 <Label maxWidth="1.7976931348623157E308" styleClass="h2" text="%game.statistics"/>
+                             </children>
+                         </VBox>
+                     </children>
+                     <padding>
+                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                     </padding>
+                  </VBox>
+               </content>
+            </ScrollPane>
+             <Button cancelButton="true" focusTraversable="false" onAction="#onCloseButtonClicked"
+                     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <styleClass>
+                   <String fx:value="window-button"/>
+                   <String fx:value="close-button"/>
+               </styleClass>
+            </Button>
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
