--- a/src/main/resources/theme/vault/replay/replay_vault.fxml
+++ b/src/main/resources/theme/vault/replay/replay_vault.fxml
@@ -6,13 +6,13 @@
                showRoot="false" xmlns="http://javafx.com/javafx/8.0.40"
                fx:controller="com.faforever.client.vault.replay.ReplayVaultController">
   <columns>
-    <TreeTableColumn fx:id="mapColumn" prefWidth="75.0" text="%replay.map"/>
-    <TreeTableColumn fx:id="titleColumn" prefWidth="75.0" text="%replay.title"/>
-    <TreeTableColumn fx:id="playersColumn" prefWidth="75.0" text="%replay.players"/>
-    <TreeTableColumn fx:id="timeColumn" prefWidth="75.0" text="%replay.time"/>
-    <TreeTableColumn fx:id="durationColumn" prefWidth="75.0" text="%replay.duration"/>
-    <TreeTableColumn fx:id="gameTypeColumn" prefWidth="75.0" text="%replay.gameType"/>
-    <TreeTableColumn fx:id="idColumn" prefWidth="75.0" text="%replay.id"/>
+      <TreeTableColumn fx:id="mapColumn" prefWidth="75.0" text="%game.map"/>
+      <TreeTableColumn fx:id="titleColumn" prefWidth="75.0" text="%game.title"/>
+      <TreeTableColumn fx:id="playersColumn" prefWidth="75.0" text="%game.players"/>
+      <TreeTableColumn fx:id="timeColumn" prefWidth="75.0" text="%game.time"/>
+      <TreeTableColumn fx:id="durationColumn" prefWidth="75.0" text="%game.duration"/>
+      <TreeTableColumn fx:id="gameTypeColumn" prefWidth="75.0" text="%game.gameType"/>
+      <TreeTableColumn fx:id="idColumn" prefWidth="75.0" text="%game.id"/>
   </columns>
   <columnResizePolicy>
     <TreeTableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
