Fix #182 (and cleanup) private message user detail

--- a/src/main/resources/theme/chat/private_chat_tab.fxml
+++ b/src/main/resources/theme/chat/private_chat_tab.fxml
@@ -1,108 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.web.WebView?>
-<Tab xmlns:fx="http://javafx.com/fxml/1" fx:id="privateChatTabRoot" xmlns="http://javafx.com/javafx/8.0.112"
+<Tab xmlns:fx="http://javafx.com/fxml/1" fx:id="privateChatTabRoot" xmlns="http://javafx.com/javafx/8.0.111"
      fx:controller="com.faforever.client.chat.PrivateChatTabController">
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
         <children>
-            <SplitPane dividerPositions="0.99" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
+            <SplitPane dividerPositions="0.8" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                 <items>
                     <AnchorPane>
                         <WebView fx:id="messagesWebView" minHeight="100.0" minWidth="100.0" prefHeight="-1.0"
                                  prefWidth="-1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
                                  AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
                     </AnchorPane>
-                    <VBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308"
-                          SplitPane.resizableWithParent="false">
-                        <padding>
-                            <Insets left="20.0" right="20.0"/>
-                        </padding>
-                        <HBox alignment="CENTER_RIGHT" prefWidth="200.0" spacing="10.0">
-                            <Label fx:id="usernameLabel" minWidth="-Infinity" text="username"
-                                   styleClass="private-chat-user-info-username"/>
-                            <ImageView fx:id="userImageView" fitHeight="32.0" fitWidth="32.0"
-                                       pickOnBounds="true" preserveRatio="true"/>
-                        </HBox>
-                        <HBox prefHeight="14"/>
-
-                        <Label minWidth="-Infinity" text="%chat.privateMessage.country"
-                               styleClass="private-chat-user-info-title"/>
-                        <HBox alignment="CENTER_RIGHT" spacing="6">
-                            <ImageView fx:id="countryImageView" fitHeight="16.0" fitWidth="16.0"
-                                       pickOnBounds="true" preserveRatio="true"/>
-                            <Label fx:id="countryLabel" minWidth="-Infinity" text="country"
-                                   styleClass="private-chat-user-info-data"/>
-                        </HBox>
-                        <HBox prefHeight="14"/>
-
-                        <Label minWidth="-Infinity" text="%chat.privateMessage.globalrating"
-                               styleClass="private-chat-user-info-title"/>
-                        <Label fx:id="globalRatingLevel" minWidth="-Infinity" text="rating"
-                               styleClass="private-chat-user-info-data"/>
-                        <HBox prefHeight="14"/>
-
-                        <Label minWidth="-Infinity" text="%chat.privateMessage.leaderboardrating"
-                               styleClass="private-chat-user-info-title"/>
-                        <Label fx:id="leaderboardRatingLevel" minWidth="-Infinity" text="rating"
-                               styleClass="private-chat-user-info-data"/>
-                        <HBox prefHeight="14"/>
-
-                        <Label minWidth="-Infinity" text="%chat.privateMessage.gamesPlayed"
-                               styleClass="private-chat-user-info-title"/>
-                        <Label fx:id="gamesPlayedLabel" minWidth="-Infinity" text="games played"
-                               styleClass="private-chat-user-info-data"/>
-                        <HBox prefHeight="35"/>
-
-                        <Label fx:id="inGameLabel" minWidth="-Infinity" text="isInGame?"
-                               styleClass="private-chat-user-info-data"/>
-                        <HBox prefHeight="25"/>
-                        <Separator/>
-                        <HBox prefHeight="10"/>
-
-                        <VBox fx:id="gamePreview" alignment="CENTER">
-                            <Label fx:id="gameTitleLabel" minWidth="-Infinity" text="game title"/>
-                            <HBox prefHeight="5"/>
-
-                            <ImageView fx:id="mapPreview" fitWidth="64" fitHeight="64"/>
-                            <HBox prefHeight="7"/>
-
-                            <Label minWidth="-Infinity" text="%chat.privateMessage.game.players"
-                                   styleClass="private-chat-user-info-title"/>
-                            <Label fx:id="gamePlayerCountLabel" minWidth="-Infinity" text="players"
-                                   styleClass="private-chat-user-info-data"/>
-                            <HBox prefHeight="7"/>
-
-                            <Label minWidth="-Infinity" text="%chat.privateMessage.game.featuredMod"
-                                   styleClass="private-chat-user-info-title"/>
-                            <Label fx:id="featuredModLabel" minWidth="-Infinity" text="featured mod"
-                                   styleClass="private-chat-user-info-data"/>
-                            <HBox prefHeight="7"/>
-
-                            <VBox fx:id="gameHostVBox" alignment="CENTER" visible="false" managed="false">
-                                <Label minWidth="-Infinity" text="%chat.privateMessage.game.host"
-                                       styleClass="private-chat-user-info-title"/>
-                                <Label fx:id="gameHostLabel" minWidth="-Infinity" text="host"
-                                       styleClass="private-chat-user-info-data"/>
-                            </VBox>
-                            <HBox prefHeight="20"/>
-
-                            <Button fx:id="joinSpectateButton" text="join/spectate"
-                                    onAction="#joinSpectateGameButtonClicked"/>
-
-                        </VBox>
-
-                    </VBox>
+                    <ScrollPane fx:id="gameDetailScrollPane" fitToWidth="true" maxHeight="1.7976931348623157E308"
+                                maxWidth="1.7976931348623157E308">
+                        <content>
+                            <fx:include fx:id="privateUserInfo" source="private_user_info.fxml"/>
+                        </content>
+                    </ScrollPane>
                 </items>
             </SplitPane>
             <TextField fx:id="messageTextField" maxWidth="1.7976931348623157E308" onAction="#onSendMessage"
